--- a/css/helpers/styling.scss
+++ b/css/helpers/styling.scss
@@ -1,12 +1,11 @@
-$background: #fdfdfd;
+body{
+  background-color: #f1f3f7;
+  margin: 0;
+}
 
 *{
     margin: 0;
     padding: 0;
-}
-
-html{
-  background-color: $background;
 }
 
 .wrapper{
