--- a/css/partials/images.scss
+++ b/css/partials/images.scss
@@ -1,11 +1,10 @@
 #gallery{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   grid-gap: 16px;
   width: 95%;
   max-width: 1200px;
   margin: auto;
-  j
 }
 
 a{
@@ -13,6 +12,7 @@ a{
   object-fit: cover;
   box-shadow: 0px 0px 16px rgba(0,0,0,0.1);
   transition: 400ms;
+  max-width: 273px;
   &:hover{
     transition: 600ms;
     transition-property: box-shadow;
@@ -23,4 +23,5 @@ a{
 img{
   width: 100%;
   height: 100%;
+  max-width: 273px;
 }
