--- a/css/partials/searchbox.scss
+++ b/css/partials/searchbox.scss
@@ -17,9 +17,13 @@ header{
     &::-webkit-input-placeholder, &::-moz-placeholder, &::placeholder, &:-ms-input-placeholder{
       font-size: 1.25rem;
     }
-    &:focus{
-      border:0;
-      border-radius: 50px;
+    &::before, &::after{
+      content:'';
     }
   }
+}
+textarea:focus, input:focus{
+    outline: none;
+    border: 1px solid lightgrey;
+    border-radius:16px;
 }
