--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
+body {
+  background-color: #f1f3f7;
+  margin: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
-}
-
-html {
-  background-color: #fdfdfd;
 }
 
 .wrapper {
@@ -35,18 +36,23 @@ header input {
 header input::-webkit-input-placeholder, header input::-moz-placeholder, header input::placeholder, header input:-ms-input-placeholder {
   font-size: 1.25rem;
 }
-header input:focus {
-  border: 0;
-  border-radius: 50px;
+header input::before, header input::after {
+  content: "";
+}
+
+textarea:focus, input:focus {
+  outline: none;
+  border: 1px solid lightgrey;
+  border-radius: 16px;
 }
 
 #gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   grid-gap: 16px;
   width: 95%;
   max-width: 1200px;
-  margin:auto;
+  margin: auto;
 }
 
 a {
@@ -54,6 +60,7 @@ a {
   object-fit: cover;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
   transition: 400ms;
+  max-width: 273px;
 }
 a:hover {
   transition: 600ms;
@@ -64,6 +71,7 @@ a:hover {
 img {
   width: 100%;
   height: 100%;
+  max-width: 273px;
 }
 
 /*!
