--- a/css/images.scss
+++ b/css/images.scss
@@ -1,6 +1,6 @@
 #gallery{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 273px));
   grid-gap: 16px;
   width: 100%;
   max-width: 1000px;
